--- a/HW001.ipynb
+++ b/HW001.ipynb
@@ -1261,7 +1261,352 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Task 6"
+    "## Task 5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If state is represented as $a \\vert 0 \\rangle \\otimes \\vert 0 \\rangle + b \\vert 1 \\rangle \\otimes \\vert 0 \\rangle + \n",
+    "c \\vert 0 \\rangle \\otimes \\vert 1 \\rangle + \\vert 1 \\rangle \\otimes \\vert 1 \\rangle$ we can consider that in case of unentanglement it can be written $(\\alpha \\vert 0 \\rangle + \\beta \\vert 1 \\rangle) \\otimes (\\gamma \\vert 0 \\rangle + \\delta \\vert 1 \\rangle)$. Thus we can write the following system:\n",
+    "\n",
+    "$$\n",
+    "\\begin{aligned} \n",
+    "    \\alpha \\gamma = a & &\\alpha \\delta = b \\\\\n",
+    "    \\beta \\gamma  = c & &\\beta \\delta  = d \n",
+    "\\end{aligned}\n",
+    "$$\n",
+    "\n",
+    "The criteria of solvable system in this case can be written as: $a d - b c = 0$. In this case this system is unentangled. Also we can solve system to find decomposition."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Sub-Task 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Wavefunction is $\\frac{2}{3} \\vert 0 0 \\rangle + \\frac{1}{3} \\vert 01 \\rangle -  \\frac{2}{3} \\vert 11 \\rangle$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\left[\\begin{matrix}0.666666666666667 & 0\\\\0.333333333333333 & -0.666666666666667\\end{matrix}\\right]$"
+      ],
+      "text/plain": [
+       "Matrix([\n",
+       "[0.666666666666667,                  0],\n",
+       "[0.333333333333333, -0.666666666666667]])"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "psi = Matrix([[2 / 3, 0], [1 / 3, - 2 / 3]])\n",
+    "psi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-0.444444444444444\n"
+     ]
+    }
+   ],
+   "source": [
+    "det = psi.det()\n",
+    "print(det)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This state is entangled"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\left[\\begin{matrix}\\alpha \\gamma & \\alpha \\delta\\\\\\beta \\gamma & \\beta \\delta\\end{matrix}\\right]$"
+      ],
+      "text/plain": [
+       "Matrix([\n",
+       "[alpha*gamma, alpha*delta],\n",
+       "[ beta*gamma,  beta*delta]])"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "alpha, beta, gamma, delta = symbols('alpha, beta, gamma, delta')\n",
+    "mat = Matrix([[alpha * gamma, alpha * delta], [beta * gamma, beta * delta]])\n",
+    "mat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[alpha*gamma - 0.666666666666667,\n",
+       " alpha*delta,\n",
+       " beta*gamma - 0.333333333333333,\n",
+       " beta*delta + 0.666666666666667]"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "eqs = list(mat - psi)\n",
+    "eqs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "solve(eqs, alpha, beta, gamma, delta)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This system can not be solved since it's entangled"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Sub-Task 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Wavefunction is $\\frac{1}{2} \\vert 0 0 \\rangle + \\frac{i}{2} \\vert 10 \\rangle - \n",
+    "\\frac{i}{2} \\vert 01 \\rangle + \\frac{1}{2} \\vert 11 \\rangle$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\left[\\begin{matrix}\\frac{1}{2} & \\frac{i}{2}\\\\- \\frac{i}{2} & \\frac{1}{2}\\end{matrix}\\right]$"
+      ],
+      "text/plain": [
+       "Matrix([\n",
+       "[ 1/2, I/2],\n",
+       "[-I/2, 1/2]])"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "psi = Matrix([[1, I], [-I, 1]]) / 2\n",
+    "psi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "det = psi.det()\n",
+    "print(det)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This state is unentangled"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(-sqrt(2)/2, sqrt(2)*I/2, -sqrt(2)/2, -sqrt(2)*I/2)"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "eqs = list(mat - psi)\n",
+    "eqs.append(alpha * conjugate(alpha) + beta * conjugate(beta) - 1)\n",
+    "salpha, sbeta, sgamma, sdelta = solve(eqs, alpha, beta, gamma, delta)[0]\n",
+    "salpha, sbeta, sgamma, sdelta"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Sub-Task 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Wavefunction is $\\frac{1}{2} \\vert 0 0 \\rangle + \\frac{1}{2} \\vert 10 \\rangle - \n",
+    "\\frac{1}{2} \\vert 01 \\rangle + \\frac{1}{2} \\vert 11 \\rangle$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\left[\\begin{matrix}\\frac{1}{2} & \\frac{1}{2}\\\\- \\frac{1}{2} & \\frac{1}{2}\\end{matrix}\\right]$"
+      ],
+      "text/plain": [
+       "Matrix([\n",
+       "[ 1/2, 1/2],\n",
+       "[-1/2, 1/2]])"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "psi = Matrix([[1, 1], [-1, 1]]) / 2\n",
+    "psi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/2\n"
+     ]
+    }
+   ],
+   "source": [
+    "det = psi.det()\n",
+    "print(det)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This state is entangled too"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "eqs = list(mat - psi)\n",
+    "#eqs.append(alpha * conjugate(alpha) + beta * conjugate(beta) - 1)\n",
+    "sls = solve(eqs, alpha, beta, gamma, delta)\n",
+    "sls"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Task "
    ]
   },
   {
